--- a/lib/stylio/views/layout.erb
+++ b/lib/stylio/views/layout.erb
@@ -1,1 +1,1 @@
-<%= erb :"../layouts/#{name}/#{name}.html", locals: { yield_placeholder: 'Yielded content' } %>
+<%= erb :"#{path}/#{name}.html", locals: { yield_placeholder: 'Yielded content' } %>
