Add example links

--- a/lib/stylio/views/menu.erb
+++ b/lib/stylio/views/menu.erb
@@ -4,5 +4,6 @@
     <li style="display: inline;"><a style="color: #FFF;" href="/elements">Elements</a></li>
     <li style="display: inline;"><a style="color: #FFF;" href="/components">Components</a></li>
     <li style="display: inline;"><a style="color: #FFF;" href="/layouts">Layouts</a></li>
+    <li style="display: inline;"><a style="color: #FFF;" href="/examples">Examples</a></li>
   </ul>
 </div>
