--- a/lib/stylio/views/header.erb
+++ b/lib/stylio/views/header.erb
@@ -1,4 +1,5 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <%= css_link %>
   <%= js_link %>
 </head>
