--- a/lib/stylio/views/styleguide.erb
+++ b/lib/stylio/views/styleguide.erb
@@ -1,3 +1,3 @@
-<%= erb :header %>
-<%= erb :menu %>
+<%= render_application_partial :header %>
+<%= render_application_partial :menu %>
 <%= yield %>
