ADD: HTML and BODY added to the layout

--- a/lib/stylio/views/components.erb
+++ b/lib/stylio/views/components.erb
@@ -1,8 +1,10 @@
-<div class="container row">
+<body>
+  <div class="container row">
     <h1>Components</h1>
     <ul>
         <% components.each do |component| %>
           <li><a href="/components/<%= component %>"><%= component %></a></li>
         <% end %>
     </ul>
-</div>
+  </div>
+</body>
