--- a/lib/stylio/views/layouts.erb
+++ b/lib/stylio/views/layouts.erb
@@ -1,8 +1,10 @@
-<div style="padding:20px;">
-  <h1>Layouts</h1>
-  <ul>
-    <% layouts.each do |layout| %>
-      <li><a href="/layouts/<%= layout %>"><%= layout %></a></li>
-    <% end %>
-  </ul>
-</div>
+<body>
+  <div style="padding:20px;">
+    <h1>Layouts</h1>
+    <ul>
+      <% layouts.each do |layout| %>
+        <li><a href="/layouts/<%= layout %>"><%= layout %></a></li>
+      <% end %>
+    </ul>
+  </div>
+</body>
