--- a/lib/stylio/views/styleguide.erb
+++ b/lib/stylio/views/styleguide.erb
@@ -1,3 +1,5 @@
-<%= render_application_partial :header %>
-<%= render_application_partial :menu %>
-<%= yield %>
+<!DOCTYPE html>
+  <%= render_application_partial :header %>
+  <%= render_application_partial :menu %>
+  <%= yield %>
+</html>
