--- a/lib/stylio/views/component.erb
+++ b/lib/stylio/views/component.erb
@@ -1,9 +1,11 @@
-<div class="container row">
-    <h1><%= name %></h1>
+<body>
+  <div class="container row">
+      <h1><%= name %></h1>
 
-    <% fixtures.each do |params| %>
-      <hr>
-      <h2><%= params.first %></h2>
-      <%= erb :"#{ path }/_#{ name }.html", locals: { params: params.last } %>
-    <% end %>
-</div>
+      <% fixtures.each do |params| %>
+        <hr>
+        <h2><%= params.first %></h2>
+        <%= erb :"#{ path }/_#{ name }.html", locals: { params: params.last } %>
+      <% end %>
+  </div>
+</body>
