--- a/lib/stylio/views/elements.erb
+++ b/lib/stylio/views/elements.erb
@@ -1,3 +1,4 @@
+<body>
 <h1>CSS Basic Elements</h1>
 
 <p>The purpose of this HTML is to help determine what default settings are with CSS and to make sure that all possible HTML Elements are included in this HTML so as to not miss any possible Elements when designing a site.</p>
@@ -149,3 +150,4 @@
 </blockquote>
 
 <small><a href="#wrapper">[top]</a></small>
+</body>
